# HW_8_QT

./: CMakeLists.txt  HW_8_QT.cpp  HW_8_QT.h  HW_8_QT.qrc  HW_8_QT.sln  HW_8_QT.ui  HW_8_QT.vcxproj  HW_8_QT.vcxproj.filters  Player.h  Question.h  README.md  main.cpp  questions.txt  resource.h
